<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.kit.dopler</groupId>
    <artifactId>smt_dopler</artifactId>
    <version>2.0.0</version>
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javadoc.disabled>true</javadoc.disabled>
        <deploy.disabled>true</deploy.disabled>
        <source.disabled>true</source.disabled>
        <checkstyle-maven-plugin.version>3.6.0</checkstyle-maven-plugin.version>
    </properties>
    
    <dependencies>
        <dependency>
            <groupId>io.github.universal-variability-language</groupId>
            <artifactId>uvl-parser</artifactId>
            <version>0.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.github.universal-variability-language</groupId>
            <artifactId>uvl-metamodel</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
		<dependency>
    		<groupId>org.antlr</groupId>
    		<artifactId>antlr4-runtime</artifactId>
    		<version>4.13.2</version>
		</dependency>
    </dependencies>
    
    <build>
        <resources>
            <resource>
                <filtering>false</filtering>
                <directory>src/main/edu/kit/dopler</directory>
                <includes>
                    <include>**/*.java</include>
                </includes>
            </resource>
            <resource>
                <filtering>false</filtering>
                <directory>src/test/edu/kit/dopler</directory>
                <includes>
                    <include>**/*.java</include>
                </includes>
            </resource>
            <resource>
                <filtering>false</filtering>
                <directory>.</directory>
                <includes>
                    <include>LICENSE</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.12.1</version>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.5.0</version>
                <reportSets>
                    <reportSet>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </reportSet>
                </reportSets>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${checkstyle-maven-plugin.version}</version>
                <configuration>
                    <configLocation>${project.basedir}/checkstyle.xml</configLocation>
                    <failsOnError>false</failsOnError> 
                </configuration>
                <reportSets>
                    <reportSet>
                        <reports>
                            <report>checkstyle</report>
                        </reports>
                    </reportSet>
                </reportSets>
            </plugin>
        </plugins>
    </reporting>
</project>